[package]
name = "static_str_ops"
version = "0.1.0"
edition = "2021"
description = "A package allows using static strings with non-trivial operations, e.g., `concat!`, `format!`, `call_once`, and more."
documentation = "https://docs.rs/static_str_ops"
homepage = "https://github.com/unsafecoerce/static_str_ops"
repository = "https://github.com/unsafecoerce/static_str_ops.git"
license = "BSD-3-Clause"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1"
gensym = "0.1"
